--- a/Weather4U/Weather4U/MainPage.xaml
+++ b/Weather4U/Weather4U/MainPage.xaml
@@ -1,14 +1,14 @@
 ﻿<Page
-    x:Class="WikipediaViewer.MainPage"
+    x:Class="Weather4U.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WikipediaViewer"
+    xmlns:local="using:Weather4U"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Background="HotPink">
-        <Button Content="Buscar Wikipedia" Click="Button_Click" Margin="30"></Button>
+    <StackPanel Background="LightBlue" >
+        <Button Content="Search Weather" HorizontalAlignment="Center" Click="Button_Click" Margin="0,50,0,0"></Button>
         <TextBlock x:Name="ResultadoTextBlock"></TextBlock>
     </StackPanel>
 </Page>
