--- a/Weather4U/Weather4U/MainPage.xaml
+++ b/Weather4U/Weather4U/MainPage.xaml
@@ -12,27 +12,47 @@
         <StackPanel Padding="15">
             <TextBox x:Name="cityTextBox" PlaceholderText="Enter with a city name" Margin="10"></TextBox>
             <Button Content="Search Weather" HorizontalAlignment="Center"  Click="Button_Click"></Button>
-            <Grid Margin="10" Background="Beige">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+            <Grid x:Name="weatherGrid" Margin="10" Visibility="Collapsed" Background="Beige" Padding="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Background="HotPink"  Margin="10">
-                    <TextBlock x:Name="nameCountryTextBlock"></TextBlock>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>                
+                
+                <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Background="HotPink" Margin="5" HorizontalAlignment="Stretch">
+                    <TextBlock x:Name="nameCountryTextBlock" TextAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="AntiqueWhite" HorizontalAlignment="Stretch"></TextBlock>
                 </Border>
-                <TextBlock x:Name="iconTextBlock" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"></TextBlock>
-                <TextBlock x:Name="mainDescriptionTextBlock"  Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"></TextBlock>
-                <TextBlock x:Name="tempTextBlock" Grid.Row="3" Grid.Column="1"></TextBlock>
-                <TextBlock x:Name="tempMinTextBlock" Grid.Row="4" Grid.Column="1"></TextBlock>
-                <TextBlock x:Name="tempMaxTextBlock" Grid.Row="5" Grid.Column="1"></TextBlock>
+
+                <Image Grid.Row="1" Grid.Column="0" Grid.RowSpan="4"  x:Name="iconImageLeft" HorizontalAlignment="Stretch" Height="100" Width="100" Source="Assets/01d.png"></Image>
+                <Border Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Background="AntiqueWhite" HorizontalAlignment="Stretch">
+                    <TextBlock x:Name="mainDescriptionTextBlock" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="HotPink" FontWeight="ExtraBlack"></TextBlock>
+                </Border>
+                <Border Grid.Row="2" Grid.Column="1">
+                    <TextBlock HorizontalAlignment="Center">Temperature</TextBlock>
+                </Border>
+                <Border Grid.Row="2" Grid.Column="2">
+                    <TextBlock x:Name="tempTextBlock" ></TextBlock>
+                </Border>
+                <Border Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center">
+                    <TextBlock>Minimum Temperature</TextBlock>
+                </Border>
+                <Border Grid.Row="3" Grid.Column="2">
+                    <TextBlock x:Name="tempMinTextBlock"></TextBlock>
+                </Border>
+                <Border Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center">
+                    <TextBlock>Maximum Temperature</TextBlock>
+                </Border>
+                <Border Grid.Row="4" Grid.Column="2">
+                    <TextBlock x:Name="tempMaxTextBlock"></TextBlock>                    
+                </Border>
+                
             </Grid>
         </StackPanel>
         
