--- a/Weather4U/Weather4U/SavedWeathersPage.xaml
+++ b/Weather4U/Weather4U/SavedWeathersPage.xaml
@@ -7,7 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <StackPanel Background="LightBlue">
         <TextBlock FontSize="50" FontFamily="Curlz MT" HorizontalAlignment="Center" Margin="0,50,0,0" FontWeight="Bold" Foreground="Black">Saved Weathers</TextBlock>
-    </Grid>
+        <Button x:Name="backButton" Click="backButton_Click">Back</Button>
+        <TextBlock x:Name="teste"></TextBlock>
+    </StackPanel>
+
 </Page>
