--- a/Weather4U/Weather4U/SavedWeathersPage.xaml
+++ b/Weather4U/Weather4U/SavedWeathersPage.xaml
@@ -10,8 +10,11 @@
 
     <StackPanel Background="LightBlue">
         <TextBlock FontSize="50" FontFamily="Curlz MT" HorizontalAlignment="Center" Margin="0,50,0,0" FontWeight="Bold" Foreground="Black">Saved Weathers</TextBlock>
-        <TextBlock x:Name="systemMsgTextBlock" HorizontalAlignment="Stretch" TextAlignment="Center"></TextBlock>
-        <Button Margin="35,0,35,-5" Background="LightBlue"  BorderBrush="Gray" HorizontalAlignment="Stretch"  x:Name="backButton" Click="backButton_Click">Go Back to Search Weather Page</Button>
+        <TextBlock x:Name="systemMsgTextBlock" Foreground="Red" FontWeight="ExtraBold" HorizontalAlignment="Stretch" TextAlignment="Center"></TextBlock>
+        <StackPanel Orientation="Horizontal" Margin="35,0,35,-5" HorizontalAlignment="Center">
+            <Button Background="LightBlue"  BorderBrush="Gray" HorizontalAlignment="Center" x:Name="backButton" Click="backButton_Click"></Button>
+            <Button x:Name="deleteButton" Click="deleteButton_Click" HorizontalAlignment="Center" Background="White" Foreground="Red" BorderBrush="Red">Delete Selected Item</Button>
+        </StackPanel>
         <Grid Padding="15">
             <Grid.RowDefinitions>              
                 <RowDefinition Height="*"/>
@@ -19,8 +22,8 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
-            <ListView ItemsSource="{x:Bind weathers}" x:Name="weathersListView" SelectionChanged="weathersListView_SelectionChanged" Height="400" ScrollViewer.VerticalScrollBarVisibility="Auto"  HorizontalAlignment="Stretch">
+
+            <ListView ItemsSource="{x:Bind weatherCtrl.weathers}" x:Name="weathersListView" SelectionChanged="weathersListView_SelectionChanged" Height="400" ScrollViewer.VerticalScrollBarVisibility="Auto"  HorizontalAlignment="Stretch">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="local:RootObject">
                         <Grid Margin="10" Background="{x:Bind backgroundColor}" Padding="10" HorizontalAlignment="Stretch">
@@ -68,8 +71,7 @@
                             </Border>
                             <Border Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Background="HotPink" HorizontalAlignment="Stretch">
                                 <TextBlock Text="{x:Bind dateTimeStr}" HorizontalAlignment="Stretch" TextAlignment="Center" Foreground="AntiqueWhite" FontWeight="ExtraBlack"></TextBlock>
-                            </Border>
-                            <Button x:Name="deleteButton" Click="deleteButton_Click" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Background="White" Foreground="Red" BorderBrush="Red">Delete</Button>
+                            </Border>                            
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
